--- a/.drone.yml
+++ b/.drone.yml
@@ -25,7 +25,28 @@ steps:
         from_secret: ecr_secret_key
     when:
       event:
+        - promote
         - push
+
+  - name: deploy-staging
+    image: public.ecr.aws/kanopy/drone-helm:v3
+    settings:
+      chart: mongodb/web-app
+      chart_version: 4.31.0
+      add_repos: [mongodb=https://10gen.github.io/helm-charts]
+      namespace: devprod-evergreen
+      release: sage
+      values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devprod-evergreen/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=sage.devprod-evergreen.staging.corp.mongodb.com
+      values_files: [ "environments/staging.yaml" ]
+      api_server: https://api.staging.corp.mongodb.com
+      kubernetes_token:
+        from_secret: staging_kubernetes_token
+      wait_for_upgrade: true
+    when:
+      event:
+        - promote
+      target:
+        - staging
 
   - name: deploy-prod
     image: public.ecr.aws/kanopy/drone-helm:v3
@@ -40,6 +61,11 @@ steps:
       api_server: https://api.prod.corp.mongodb.com
       kubernetes_token:
         from_secret: prod_kubernetes_token
+      wait_for_upgrade: true
     when:
+      branch:
+        - main
       event:
-        - push
+        - promote
+      target:
+        - production
