format other readmes

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "eslint:fix": "yarn eslint:strict --fix",
     "eslint:staged": "STRICT=1 eslint",
     "eslint:strict": "STRICT=1 eslint .",
-    "format": "prettier --write src/**/*.ts */**/*.md",
-    "format:check": "prettier --check src/**/*.ts */**/*.md",
+    "format": "prettier --write \"src/**/*.ts\" \"**/*.md\" \"*.md\"",
+    "format:check": "prettier --check \"src/**/*.ts\" \"**/*.md\" \"*.md\"",
     "run-analyzer": "ts-node -r tsconfig-paths/register src/mastra/tests/scripts/run-log-analyzer.ts",
     "test-thinking-agent": "ts-node --transpile-only -r tsconfig-paths/register src/mastra/tests/scripts/test-thinking-agent.ts",
     "chat-with-staging": "ts-node --transpile-only -r tsconfig-paths/register src/mastra/tests/scripts/chat-with-staging.ts",
