DEVPROD-21909 add workaround for braintrust log tracing (#86)

--- a/.env.production
+++ b/.env.production
@@ -6,4 +6,6 @@ EVERGREEN_URL=https://evergreen.mongodb.com
 # Observability
 OTEL_EXPORTER_OTLP_ENDPOINT=https://api.braintrust.dev/otel
 
+# Braintrust
+BRAINTRUST_PROJECT_NAME=sage-staging
 
