--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@opentelemetry/exporter-trace-otlp-http": "^0.204.0",
     "@opentelemetry/sdk-node": "^0.204.0",
     "@opentelemetry/sdk-trace-base": "^2.1.0",
+    "@opentelemetry/winston-transport": "^0.16.0",
     "@sentry/node": "^10.10.0",
     "@sentry/profiling-node": "^10.11.0",
     "ai": "^5.0.33",
@@ -67,7 +68,6 @@
     "query-string": "^9.2.2",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
