--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -37,6 +37,7 @@ env:
   NODE_ENV: staging
   OTEL_COLLECTOR_URL: http://otel-collector-web-app.devprod-platform.svc.cluster.local:4318/v1/traces
   OTEL_EXPORTER_OTLP_ENDPOINT: https://api.braintrust.dev/otel
+  OTEL_LOG_COLLECTOR_URL: http://otel-collector-web-app.devprod-platform.svc.cluster.local:4318/v1/logs
   PORT: 8080
   SENTRY_DSN: https://3db76f0989faad4c102a8708fba9446f@o4504991346720768.ingest.us.sentry.io/4509905876942849
 
