DEVPROD-21367: Replace `ts-node-dev` with `vite-node`

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "evergreen-ai-service",
   "main": "dist/main.js",
+  "type": "module",
   "scripts": {
     "build": "tsc && tsc-alias",
     "start": "NODE_ENV=production node dist/main.js",
     "dev": "NODE_ENV=development yarn dev-run",
-    "dev-run": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/main.ts",
+    "dev-run": "vite-node --watch src/main.ts",
     "dev:staging": "NODE_ENV=staging yarn dev-run",
     "dev:prod": "NODE_ENV=production yarn dev-run",
     "deploy:staging": "NODE_ENV=staging dotenv-flow -- sh scripts/deploy.sh",
@@ -23,9 +24,9 @@
     "eslint:strict": "STRICT=1 eslint .",
     "format": "prettier --write src/**/*.ts",
     "format:check": "prettier --check src/**/*.ts",
-    "run-analyzer": "ts-node -r tsconfig-paths/register src/mastra/tests/scripts/run-log-analyzer.ts",
-    "test-thinking-agent": "ts-node --transpile-only -r tsconfig-paths/register src/mastra/tests/scripts/test-thinking-agent.ts",
-    "chat-with-staging": "ts-node --transpile-only -r tsconfig-paths/register src/mastra/tests/scripts/chat-with-staging.ts",
+    "run-analyzer": "vite-node src/mastra/tests/scripts/run-log-analyzer.ts",
+    "test-thinking-agent": "vite-node src/mastra/tests/scripts/test-thinking-agent.ts",
+    "chat-with-staging": "vite-node src/mastra/tests/scripts/chat-with-staging.ts",
     "mastra:dev": "mastra dev -p 4111",
     "mastra:build": "mastra build",
     "mastra:start": "node --import=./.mastra/output/instrumentation.mjs .mastra/output/index.mjs",
@@ -101,11 +102,10 @@
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4",
-    "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.16",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6",
     "typescript-eslint": "^8.42.0",
+    "vite-node": "^3.2.4",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
