--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -42,7 +42,7 @@ buildvariants:
       - name: evergreen-evals
       - name: question-classifier-evals
       - name: log-analyzer-workflow-evals
-      - name: mastra-dev-startup
+      - name: check-mastra-dev-startup
     display_tasks:
       - name: evals
         execution_tasks:
@@ -98,7 +98,7 @@ tasks:
       - func: attach-braintrust-results
         vars:
           xml_file_name: log_analyzer_workflow_evals.xml
-  - name: mastra-dev-startup
+  - name: check-mastra-dev-startup
     commands:
       - func: mastra-dev-startup
 
@@ -336,4 +336,4 @@ functions:
       shell: bash
       script: |
         ${PREPARE_SHELL}
-scripts/mastra-dev-startup.sh
+        .scripts/mastra-dev-startup.sh
