--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"],
+  // Exclude mastra directory from build. It should be built by mastra dev command.
+  "exclude": ["node_modules", "dist", "src/mastra/**"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
