--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,14 @@
   "compilerOptions": {
     /* Basic Options */
     "target": "ES2022",
-    "module": "ESNext",
+    "module": "ES2022",
     "moduleResolution": "Node",
     "lib": ["ES2022"],
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
     "isolatedModules": true,
-    "paths": {
-      "*": ["*"]
-    },
+
     "types": ["node", "vitest/globals"],
     "baseUrl": "./src",
 
@@ -24,10 +22,11 @@
     /* Code Quality */
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "composite": true
   },
   "include": ["src/**/*"],
   // Exclude mastra directory from build. It should be built by mastra dev command.
-  "exclude": ["node_modules", "dist", "src/mastra/**"],
+  "exclude": ["node_modules", "dist"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
