--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
     "composite": true,
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ES2022",
+    "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "types": ["node"],
     "target": "ES2022"
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts"],
+  "exclude": ["src/mastra/**"]
 }
