--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "NODE_ENV=production node dist/main.js",
     "dev": "NODE_ENV=development yarn dev-run",
     "dev-run": "vite-node --watch src/main.ts",
-    "dev:staging": "NODE_ENV=staging yarn dev-run",
-    "dev:prod": "NODE_ENV=production yarn dev-run",
+    "dev:staging": "NODE_ENV=staging dotenv-flow yarn dev-run",
+    "dev:prod": "NODE_ENV=production dotenv-flow yarn dev-run",
     "deploy:staging": "NODE_ENV=staging dotenv-flow -- sh scripts/deploy.sh",
     "clean": "rm -rf dist bin node_modules",
     "codegen": "graphql-codegen-esm --config graphql.config.ts",
