DEVPROD-22503 Fix sage production server crash (#111)

--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -43,6 +43,7 @@ buildvariants:
       - name: question-classifier-evals
       - name: log-analyzer-workflow-evals
       - name: check-mastra-dev-startup
+      - name: check-sage-prod-startup
     display_tasks:
       - name: evals
         execution_tasks:
@@ -100,7 +101,14 @@ tasks:
           xml_file_name: log_analyzer_workflow_evals.xml
   - name: check-mastra-dev-startup
     commands:
+      - func: setup-mongodb
+      - func: yarn-build
       - func: mastra-dev-startup
+  - name: check-sage-prod-startup
+    commands:
+      - func: setup-mongodb
+      - func: yarn-build
+      - func: sage-prod-startup
 
 functions:
   attach-test-results:
@@ -337,3 +345,12 @@ functions:
       script: |
         ${PREPARE_SHELL}
         ./scripts/mastra-dev-startup.sh
+
+  sage-prod-startup:
+    command: shell.exec
+    params:
+      working_dir: sage
+      shell: bash
+      script: |
+        ${PREPARE_SHELL}
+        ./scripts/sage-prod-startup.sh
