--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,32 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
+    /* Basic Options */
+    "target": "ES2022",
+    "module": "ES2022",
     "moduleResolution": "Node",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "outDir": "./dist",
-    "baseUrl": "src",
+    "lib": ["ES2022"],
+    "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "declaration": true,
-    "declarationMap": true,
+    "isolatedModules": true,
+
+    "types": ["node", "vitest/globals"],
+    "baseUrl": "./src",
+
+    /* Directory Options */
+    "rootDir": "./src",
+    "outDir": "./dist",
     "sourceMap": true,
-    "removeComments": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "noImplicitThis": true,
+    "declaration": true,
+
+    /* Code Quality */
+    "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
-    "noImplicitOverride": true,
-    "types": ["vitest/globals"]
+    "composite": true
   },
-  "include": ["src", "vite.config.ts"],
-  "exclude": ["node_modules", "dist", ".mastra"]
+  "include": ["src/**/*"],
+  // Exclude mastra directory from build. It should be built by mastra dev command.
+  "exclude": ["node_modules", "dist"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
