--- a/.drone.yml
+++ b/.drone.yml
@@ -29,6 +29,7 @@ steps:
         - push
 
   - name: deploy-staging
+    depends_on: [fetch-pre-deploy-version]
     image: public.ecr.aws/kanopy/drone-helm:v3
     settings:
       chart: mongodb/web-app
@@ -75,17 +76,15 @@ steps:
     image: alpine/git
     commands:
       - apk add --no-cache bash curl
-      - curl -s https://sage.prod.corp.mongodb.com/version > /tmp/previous_version.txt
+      - curl -s https://sage.devprod-evergreen.staging.corp.mongodb.com/version > /tmp/previous_version.txt
     when:
-      branch:
-        - main
       event:
         - promote
       target:
-        - production
+        - staging
 
   - name: send-deployment-email
-    depends_on: [deploy-prod]
+    depends_on: [deploy-staging]
     image: alpine/git
     commands:
       - apk add --no-cache bash curl mailx git
@@ -93,11 +92,9 @@ steps:
       - PREVIOUS_VERSION=$(cat /tmp/previous_version.txt)
       - ./scripts/fetch_deployment_commits.sh "$PREVIOUS_VERSION"
     when:
-      branch:
-        - main
       event:
         - promote
       target:
-        - production
+        - staging
       status:
         - success
