DEVPROD-22706 Add resource and replica autoscaling to sage (#122)

--- a/environments/prod.yaml
+++ b/environments/prod.yaml
@@ -51,3 +51,14 @@ envSecrets:
 
 serviceAccount:
   enabled: true
+
+autoscaling:
+  minReplicas: 2
+  maxReplicas: 5
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 80
