Use tsconfig paths to do auto resolution of abs imports in mastra files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,22 @@
 
     "types": ["node", "vitest/globals"],
     "baseUrl": "./src",
+    "paths": {
+      "@/*": ["./*"],
+      "@/api-server/*": ["api-server/*"],
+      "@/clients/*": ["clients/*"],
+      "@/config": ["config/index.ts"],
+      "@/constants/*": ["constants/*"],
+      "@/db/*": ["db/*"],
+      "@/gql/*": ["gql/*"],
+      "@/mastra": ["mastra/index.ts"],
+      "@/mastra/*": ["mastra/*"],
+      "@/test-utils/*": ["test-utils/*"],
+      "@/types": ["types/index.ts"],
+      "@/types/*": ["types/*"],
+      "@/utils": ["utils/index.ts"],
+      "@/utils/*": ["utils/*"]
+    },
 
     /* Directory Options */
     "rootDir": "./src",
