--- a/.drone.yml
+++ b/.drone.yml
@@ -33,7 +33,7 @@ steps:
         - push
 
   - name: generate-email-staging
-    image: bitnami/kubectl:latest
+    image: public.ecr.aws/kanopy/drone-helm:v3
     commands:
       - kubectl config set-cluster staging --server="$KUBE_API_SERVER" --insecure-skip-tls-verify=true
       - kubectl config set-credentials staging --token="$KUBE_TOKEN"
