--- a/.drone.yml
+++ b/.drone.yml
@@ -35,11 +35,14 @@ steps:
   - name: generate-email-staging
     image: public.ecr.aws/kanopy/drone-helm:v3
     commands:
+      - apk update && apk add --no-cache curl git
+      - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
+      - chmod +x ./kubectl
+      - mv ./kubectl /usr/local/bin/kubectl
       - kubectl config set-cluster staging --server="$KUBE_API_SERVER" --insecure-skip-tls-verify=true
       - kubectl config set-credentials staging --token="$KUBE_TOKEN"
       - kubectl config set-context staging --cluster=staging --user=staging --namespace=devprod-evergreen
       - kubectl config use-context staging
-      - apk add --no-cache git
       - PREV_COMMIT=$(kubectl get pods --selector=release=sage -n devprod-evergreen -o jsonpath='{.items[*].metadata.labels}' 2>/dev/null | cut -d'}' -f1 | grep -oE 'git-[0-9a-fA-F]+' | cut -d- -f2 | head -n1)
       - if [ -n "$PREV_COMMIT" ]; then ./scripts/generate_deploy_email.sh $PREV_COMMIT; cp temp/deploy_email.html /shared/deploy_email.html; else echo "No previous commit found"; fi
     environment:
